# scylla-db-tcp

./: Cargo.toml  Code Of Conduct.md  Contributing.md  License.md  ReadMe.md
.github/workflows/: release-linux.yml  release-mac.yml  release-windows.yml
client/: .gitignore  README.md  ReadMe.md  bun.lockb  package.json  tsconfig.json
client/src/: client.ts  index.ts  test.ts
client/src/mapping/: Mapper.ts  ModelMapper.ts  Result.ts  index.ts
client/src/mapping/tables/: Default.ts  UnderscoreCqlToCamelCaseMappings.ts  UnderscoreCqlToPascalCaseMappings.ts
client/src/types/: responses.ts
client/src/types/structs/: common.ts  connect.ts  insert.ts  select.ts  update.ts
client/src/util/: baseCommands.ts  downloader.ts  parser.ts  uuid.ts
src/: calculate_hash.rs  main.rs  state.rs  structs.rs
src/commands/: connect.rs  delete.rs  insert.rs  mod.rs  raw.rs  select.rs  update.rs
src/structs/: common.rs  connect.rs  custom.rs  delete.rs  insert.rs  mod.rs  raw.rs  select.rs  update.rs
src/structs/custom/: ban.rs  bot.rs  dms.rs  empty_buckets.rs  friends.rs  guild_members.rs  messages.rs  mod.rs  permissions_overides.rs  roles.rs  settings.rs  udt.rs  user.rs
src/util/: arrayfromhash.rs  mod.rs  parse_cql_value.rs  queries.rs
