[package]
name = "scyllatcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util ={ version = "0.3.30", features = ["async-await", "sink", "std"] }
indexmap = { version = "2.2.1", features = ["serde"]}
lazy_static = "1.4.0"
rand = "0.8.5"
scylla = "0.11.1"
serde = { version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"]}
